tests/src/frontend/typechecking/exhaustiveness/invalid/child_override_named_params_dead_pattern.sk
base class A{x: Int}
class B{y: Bool} extends A

fun myMatch(x: A): String {
  x match {
  | A{x => 1} -> "a"
  | B{y => true, x => 1} -> "c"
  | A{x => _} -> "b"
  }
}
